Modify The Header Section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             <li><a class="active" href="index.html">Home</a></li>
                             <li>
                                 <a href="#" class="hrader-main-title">Calculator <i class="fas fa-angle-down"></i></a>
-                                <input type="checkbox" id="hrader-sub-title">
-                                <label for="hrader-sub-title">Calculator <i class="fas fa-angle-down"></i></label>
+                                <input type="checkbox" id="hrader-sub-title2">
+                                <label for="hrader-sub-title2">Calculator <i class="fas fa-angle-down"></i></label>
                                 <ul>
                                     <li><a href="affordabilityCalculator.html">Affordability Calculator</a></li>
                                     <li><a href="monthlyPaymentCalculator.html">Monthly Payment Calculator</a></li>
@@ -63,8 +63,18 @@
                                 </ul>
                             </li>
                             <li><a href="videos.html">Videos</a></li>
+                            <li>
+                                <a href="#" class="hrader-main-title">Document List <i
+                                        class="fas fa-angle-down"></i></a>
+                                <input type="checkbox" id="hrader-sub-title">
+                                <label for="hrader-sub-title">Document List <i class="fas fa-angle-down"></i></label>
+                                <ul>
+                                    <li><a href="initial.html">Initial Pre-Qualification</a></li>
+                                    <li><a onclick="location.href='Assets/Documents/DC_credit_autho_form.docx';">Credit
+                                            Pull</a></li>
+                                </ul>
+                            </li>
                             <li><a href="mortgageInfo.html">Mortgage Info.</a></li>
-                            <li><a href="documentList.html">Document List</a></li>
                             <li><a href="appointment.html">Appointment</a></li>
                             <li><a href="faqs.html">FAQs</a></li>
                             <li><a href="aboutUs.html">About Us</a></li>
@@ -80,7 +90,7 @@
                 <ul class="bangla-section">
                     <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
                     <li><a href="video.html">ভিডিও</a></li>
-                    <li><a href="documentListBangla.html">ডকুমেন্ট লিস্ট</a></li>
+                    <li><a href="initialBangla.html">ডকুমেন্ট লিস্ট</a></li>
                     <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
                     <li><a href="aboutUsBangla.html">আমাদের তথ্য</a></li>
                     <li><a href="contactUs.html">যোগাযোগ</a></li>
