--- a/initial.html
+++ b/initial.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Desh Capital LLC | FAQs</title>
+        <title>Desh Capital LLC | Loan Programs</title>
         <link rel="shortcut icon" type="image/png" href="Assets/Images/Logo.jpg">
 
         <!-- FONTASOME CDN -->
@@ -15,7 +15,7 @@
 
         <!-- CSS FILE LINK -->
         <link rel="stylesheet" href="Styles/headers.css">
-        <link rel="stylesheet" href="Styles/faqs.css">
+        <link rel="stylesheet" href="Styles/documentList.css">
         <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -101,124 +101,95 @@
         <!-- HEADER SECTION END -->
 
         <!-- MAIN SECTION START -->
-        <section class="collect-faqs">
-            <a class="switch-btn" href="faqsBangla.html">বাংলা</a>
-            <div class="section-btn">
-                <a class="switch-btn" href="#faqs">FAQS</a>
-            </div>
-            <h1 class="collect-faqs-title">Upload Your Question Here</h1>
-            <div class="collect-faqs-form">
-                <form action="">
-                    <label class="collect-faqs-label" for="name">Name:</label><br>
-                    <input class="collect-faqs-input" type="text" name="name" placeholder="Enter Name" required><br>
+        <section class="document-lists">
+            <a class="switch-btn" href="documentListBangla.html">বাংলা</a>
+            <h1 class="document-lists-title">Initial Pre-Qualification Document List</h1>
+            <div class="document-list">
+                <h5 class="document-list-title">For a Mortgage 'Pre-Approval' Letter pls send the following to </h5>
+                <div class="mail-section">
+                    <a href="mailto:info@deshcapitalllc.com" class="mail">info@deshcapitalllc.com</a>
+                    <a class="mail">OR Fax at (407) 305 7002 </a>
+                </div>
 
-                    <label class="collect-faqs-label" for="question">Question:</label><br>
-                    <textarea class="collect-faqs-input textarea" name="question" id="" rows="10"
-                        placeholder="Enter Questions Here" required></textarea><br>
+                <div class="box">
+                    <h5 class="box-text">The list below applies to EACH Mortgage APPLICANT(s) / Borrower(s) ONLY. <span
+                            class="color">Person(s) on Title but not on loan must only provide a copy of a valid
+                            ID.</span></h5>
+                </div>
 
-                    <h1 class="submit-message" id="msg"></h1>
-
-
-                    <div class="collect-faqs-form-btn">
-                        <button class="collect-faqs-form-btn-reset" type="reset">Reset</button>
-                        <button class="collect-faqs-form-btn-submit" type="submit" id="sub">Submit</button>
+                <h5 class="document-list-header">(A) Basic Document Set for PURCHASE loan</h5>
+                <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li><strong>Complete the credit pull authorization form (attached or online).</strong></li>
+                    <li>Copy of Govt. issued ID showing <strong>CURRENT address</strong> </li>
+                    <li>Copy of Social Security card/ ITIN number.</li>
+                    <li><strong>Last 2 months </strong>Personal bank statements-ALL pages, even blanks.</li>
+                    <li><strong>Last 30 days </strong>income statements* - pay stubs/ 1099 /rent /SSA
+                        /SSI /Stock dividend /commission, etc are income also.</li>
+                    <li>Recent Personal Tax returns* - <strong>ALL pages </strong>with W2's /1099s etc. Prior </li>
+                    <li>Personal Tax returns* - <strong>ALL pages </strong>with W2's /1099s etc. </li>
+                </ul>
+                </p>
+                <h5 class="document-list-header">(B) For Re-financing loan - + (A) </h5>
+                <p class="document-list-text">
+                <ul class="document-list-list square">
+                    <li>Current month's mortgage statement </li>
+                    <li>Current Home owner's insurance invoice copy</li>
+                    <li>HOA monthly/quarterly Statement, if any. </li>
+                    <li>LATEST monthly statement(s) for <strong>ALL items Refi is going to pay off.</strong></li>
+                    <li>Copy of lease, if the property is currently rented. </li>
+                </ul>
+                </p>
+                <h5 class="document-list-header">(C) IF Self employed (25%+ owner of the business where you work) + (A)
+                </h5>
+                <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li> Last 2 years' business tax returns - ALL pages </li>
+                    <li>Last 2 months' business bank statements. </li>
+                </ul>
+                </p>
+                <h5 class="document-list-header">(D) For 2nd or further properties (even if shared with others) + (A)
+                </h5>
+                <p class="document-list-text">
+                <ul class="document-list-list square">
+                    <li>For EACH property Owned ; </li>
+                    <li>Last month's mortgage statement, if any</li>
+                    <li> Current Home owner's insurance invoice copy, if any.</li>
+                    <li>HOA monthly/quarterly Statement, if any</li>
+                    <li>Current Property Tax bill copy, all applicable</li>
+                    <li>Copy of lease, if the property is currently rented.</li>
+                </ul>
+                </p><br><br><br>
+                <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li>Advise in advance if you plan to use Gift/DPA funds </li>
+                    <li>Advise in advance if you are 1st time home buyer. </li>
+                    <li><strong>If you are missing any document - ask for an alternate document list. - <u>Particular
+                                loan scenarios/programs may call for additional document(s)</u> - More information
+                            provided at the beginning helps a SMOOTH APPROVAL. </strong></li>
+                </ul>
+                </p>
+                <div class="mail-section">
+                    <a href="mailto:info@deshcapitalllc.com" class="mail">info@deshcapitalllc.com</a>
+                    <a class="mail">OR Fax at (407) 305 7002 </a>
+                </div>
+                <div class="button-text-section">
+                    <p class="document-list-text center">
+                    <ul class="document-list-list square">
+                        <li><strong>* NOT needed for No Income/ No Ratio/ Alternate document loans.</strong></li>
+                    </ul>
+                    </p>
+                    <div class="download-btns">
+                        <button class="download-btn"
+                            onclick="location.href='Assets/Documents/Initial_Pre-Qualification_Document_List.pdf';">Download
+                            This Document</button>
                     </div>
-                </form>
+
+                </div>
+
+
             </div>
         </section>
-
-        <section id="faqs" class="faqs">
-            <h1 class="faqs-title">FAQS</h1>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">What types of mortgages do you offer?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">At Desh Capital LLC, we offer a variety of mortgage types, including fixed-rate
-                        mortgages, adjustable-rate mortgages (ARMs), FHA loans, jumbo loans, and more. We can help you
-                        find the mortgage that best fits your needs and financial situation.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">Is Desh Capital LLC licensed and insured?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">Yes, Desh Capital LLC is licensed and insured to provide mortgage services. Our
-                        team is dedicated to maintaining compliance with all relevant laws and regulations.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">How much can I borrow for a mortgage?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">The amount you can borrow for a mortgage depends on a number of factors, including
-                        your income, credit score, debt-to-income ratio, and the value of the property you are looking
-                        to purchase. Our team can work with you to determine your borrowing power and provide you with a
-                        pre-approval letter so you can start shopping for homes.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">How long does it take to get a mortgage?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">The timeline for getting a mortgage can vary depending on a number of factors,
-                        including the type of mortgage, your financial situation, and the current state of the housing
-                        market. In general, the process can take anywhere from 30 to 60 days, but our team will work to
-                        make the process as efficient and streamlined as possible.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">Can I refinance my mortgage with Desh Capital LLC?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">Yes, we offer refinancing options for homeowners who are looking to lower their
-                        monthly mortgage payments, shorten their loan term, or access their home equity. Our team can
-                        help you determine whether refinancing is the right choice for your financial goals and guide
-                        you through the process.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">What if I have bad credit? Can I still get a mortgage?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">While having a good credit score can help you qualify for more favorable mortgage
-                        terms, we understand that not everyone has perfect credit. Our team will work with you to assess
-                        your financial situation and explore mortgage options that may be available to you, including
-                        FHA loans and other government-backed programs.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">How can I contact Desh Capital LLC for more information?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">You can contact Desh Capital LLC by visiting our website and filling out a contact
-                        form, or by calling us directly at our listed phone number. Our team is happy to answer any
-                        questions you may have about our mortgage products and services.</p>
-                </details>
-                <hr>
-            </div>
-
-        </section>
-
         <!-- MAIN SECTION END -->
 
         <!-- FOOTER START -->
@@ -282,7 +253,6 @@
         <!-- FOOTER END -->
 
         <!-- JAVASCRIPT FILE LINK -->
-        <script src="Javascript/faqs.js"></script>
         <script src="Javascript/feedback.js"></script>
     </body>
 
