--- a/initialBangla.html
+++ b/initialBangla.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Desh Capital LLC | FAQs</title>
+        <title>Desh Capital LLC | ডকুমেন্ট লিস্ট</title>
         <link rel="shortcut icon" type="image/png" href="Assets/Images/Logo.jpg">
 
         <!-- FONTASOME CDN -->
@@ -15,7 +15,7 @@
 
         <!-- CSS FILE LINK -->
         <link rel="stylesheet" href="Styles/headers.css">
-        <link rel="stylesheet" href="Styles/faqs.css">
+        <link rel="stylesheet" href="Styles/documentList.css">
         <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -101,124 +101,91 @@
         <!-- HEADER SECTION END -->
 
         <!-- MAIN SECTION START -->
-        <section class="collect-faqs">
-            <a class="switch-btn" href="faqsBangla.html">বাংলা</a>
-            <div class="section-btn">
-                <a class="switch-btn" href="#faqs">FAQS</a>
-            </div>
-            <h1 class="collect-faqs-title">Upload Your Question Here</h1>
-            <div class="collect-faqs-form">
-                <form action="">
-                    <label class="collect-faqs-label" for="name">Name:</label><br>
-                    <input class="collect-faqs-input" type="text" name="name" placeholder="Enter Name" required><br>
+        <section class="document-lists">
+            <a class="switch-btn" href="documentList.html">English</a>
+            <h1 class="document-lists-title">প্রাক-অনুমোদন ডকুমেন্ট লিস্ট</h1>
+            <div class="document-list">
+                <h5 class="document-list-title">প্রাক-অনুমোদন এর জন্য নিম্নলিখিত গুলি পাঠান- </h5>
+                <div class="mail-section">
+                    <a href="mailto:info@deshcapitalllc.com" class="mail">info@deshcapitalllc.com</a>
+                    <a class="mail">OR Fax at (407) 305 7002 </a>
+                </div>
 
-                    <label class="collect-faqs-label" for="question">Question:</label><br>
-                    <textarea class="collect-faqs-input textarea" name="question" id="" rows="10"
-                        placeholder="Enter Questions Here" required></textarea><br>
+                <p class="document-list-text">তালিকাটি <span class="color">শুধুমাত্র</span> ঋণগ্রহীতার (দের) ক্ষেত্রে
+                    প্রযোজ্য।</p>
 
-                    <h1 class="submit-message" id="msg"></h1>
+                <h5 class="document-list-header">(ক) <strong>ক্রয় ঋণের</strong> জন্য প্রাথমিক ডকুমেন্ট সেট -</h5>
+                <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li>ক্রেডিট পুল অনুমোদন ফর্মটি সম্পূর্ণ করুন, এবং ফেরত পাঠান</li>
+                    <li>সরকার অনুমদিত পরিচয়পত্র (ড্রইভিং লাইসেন্স, সটেট আইডি, পাসপোর্ট ইত্যাদি) এর কপি </li>
+                    <li>সোসাল সিকিউরিটি কার্ডের কপি (শুধু নম্বর হলেও চলবে)</li>
+                    <li>গত দুই মাসের ব্যাংক সটেট্মেন্ট (সকল পাতা, খালি পাতা হলেও)</li>
+                    <li>গত ৩০ দিনের সকল আয়ের প্রমান (পে স্টাব/কমিশন/ভাড়া/স্টক লভ্যাংশ SSA/SSI/1099 ইত্যাদি)</li>
+                    <li>অতি সাম্প্রতিক বছরের পারসোনাল ট্যাক্স রিটার্ন - সকল পাতা, W2/1099 ইত্যাদি সহ</li>
+                    <li>গত সাম্প্রতিক বছরের পারসোনাল ট্যাক্স রিটার্ন - সকল পাতা, W2/1099 ইত্যাদি সহ</li>
+                    <li>যদি কোন ব্যাবসার ২০% এর অধিকের মালিক হন তবে গত ২ বছরের ট্যাক্স রিটার্ন - সকল পাতা</li>
+                </ul>
+                </p>
+                <h5 class="document-list-header">(খ) ঋণ পুনরায় অর্থায়নের জন্য - + (ক)</h5>
+                <p class="document-list-text">
+                <ul class="document-list-list square">
+                    <li>গত মাসের বন্ধকী বিবৃতি</li>
+                    <li>বর্তমান বাড়ির মালিকের বীমা চালানের অনুলিপি</li>
+                </ul>
+                </p>
+                <h5 class="document-list-header">(গ) যদি স্ব-নিযুক্ত (25% + আপনি যেখানে কাজ করেন তার মালিক) + (ক)</h5>
+                <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li>গত 2 বছরের ব্যবসায়িক ট্যাক্স রিটার্ন - সমস্ত পৃষ্ঠা</li>
+                    <li>গত 2 মাসের ব্যবসায়িক ব্যাংক স্টেটমেন্ট</li>
+                </ul>
+                </p>
 
 
-                    <div class="collect-faqs-form-btn">
-                        <button class="collect-faqs-form-btn-reset" type="reset">Reset</button>
-                        <button class="collect-faqs-form-btn-submit" type="submit" id="sub">Submit</button>
+                <p class="document-list-text">
+                <ul class="document-list-list square">
+                    <li>মালিকানাধীন প্রতিটি সম্পত্তির জন্য,</li>
+                    <li>গত মাসের বন্ধকী বিবৃতি, যদি থাকে</li>
+                    <li> বর্তমান বাড়ির মালিকের বীমা চালানের অনুলিপি</li>
+                    <li>HOA মাসিক / ত্রৈমাসিক বিবৃতি, যদি থাকে।</li>
+                </ul>
+                </p><br><br><br>
+                <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li>আপনি যদি উপহার / ডিপিএ তহবিল ব্যবহার করার পরিকল্পনা করেন তবে দয়া করে আমাকে অগ্রিম জানান</li>
+                </ul>
+                </p>
+                <p class="document-list-text">
+                <ul class="document-list-list square">
+
+                    <li>আপনি যদি কোনও নথি অনুপস্থিত থাকেন তবে বিকল্প নথির তালিকার জন্য জিজ্ঞাসা করুন</li>
+                    <li>বিশেষ ঋণ পরিস্থিতি / প্রোগ্রাম অন্যান্য দস্তাবেজ (গুলি) এর জন্য কল করতে পারে</li>
+                    <li>শুরুতে আপনি আমাদের যত বেশি তথ্য সরবরাহ করবেন,</li>
+                    <li>মসৃণ অনুমোদনের জন্য সম্ভাবনাগুলি তত ভাল।</li>
+                </ul>
+                </p>
+                <div class="mail-section">
+                    <a href="mailto:info@deshcapitalllc.com" class="mail">info@deshcapitalllc.com</a>
+                    <a class="mail">OR Fax at (407) 305 7002 </a>
+                </div>
+                <div class="button-text-section">
+                    <p class="document-list-text center">
+                    <ul class="document-list-list square">
+                        <li><strong>* কোন আয় / বিবৃত আয় ঋণ জন্য প্রয়োজন হয় না। </strong></li>
+                    </ul>
+                    </p>
+                    <div class="download-btns">
+                        <button class="download-btn"
+                            onclick="location.href='Assets/Documents/Initial_Pre-Qualification_Document_List_Bangla.pdf';">ডকুমেন্টটি
+                            ডাউনলোড করুন</button>
                     </div>
-                </form>
+
+                </div>
+
+
             </div>
         </section>
-
-        <section id="faqs" class="faqs">
-            <h1 class="faqs-title">FAQS</h1>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">What types of mortgages do you offer?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">At Desh Capital LLC, we offer a variety of mortgage types, including fixed-rate
-                        mortgages, adjustable-rate mortgages (ARMs), FHA loans, jumbo loans, and more. We can help you
-                        find the mortgage that best fits your needs and financial situation.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">Is Desh Capital LLC licensed and insured?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">Yes, Desh Capital LLC is licensed and insured to provide mortgage services. Our
-                        team is dedicated to maintaining compliance with all relevant laws and regulations.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">How much can I borrow for a mortgage?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">The amount you can borrow for a mortgage depends on a number of factors, including
-                        your income, credit score, debt-to-income ratio, and the value of the property you are looking
-                        to purchase. Our team can work with you to determine your borrowing power and provide you with a
-                        pre-approval letter so you can start shopping for homes.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">How long does it take to get a mortgage?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">The timeline for getting a mortgage can vary depending on a number of factors,
-                        including the type of mortgage, your financial situation, and the current state of the housing
-                        market. In general, the process can take anywhere from 30 to 60 days, but our team will work to
-                        make the process as efficient and streamlined as possible.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">Can I refinance my mortgage with Desh Capital LLC?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">Yes, we offer refinancing options for homeowners who are looking to lower their
-                        monthly mortgage payments, shorten their loan term, or access their home equity. Our team can
-                        help you determine whether refinancing is the right choice for your financial goals and guide
-                        you through the process.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">What if I have bad credit? Can I still get a mortgage?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">While having a good credit score can help you qualify for more favorable mortgage
-                        terms, we understand that not everyone has perfect credit. Our team will work with you to assess
-                        your financial situation and explore mortgage options that may be available to you, including
-                        FHA loans and other government-backed programs.</p>
-                </details>
-                <hr>
-            </div>
-            <div class="faq">
-                <details>
-                    <summary>
-                        <h4 class="question">How can I contact Desh Capital LLC for more information?</h4>
-                        <span class="down-arrow"><i class="fas fa-chevron-down"></i></span>
-                    </summary>
-                    <p class="answer">You can contact Desh Capital LLC by visiting our website and filling out a contact
-                        form, or by calling us directly at our listed phone number. Our team is happy to answer any
-                        questions you may have about our mortgage products and services.</p>
-                </details>
-                <hr>
-            </div>
-
-        </section>
-
         <!-- MAIN SECTION END -->
 
         <!-- FOOTER START -->
@@ -282,7 +249,6 @@
         <!-- FOOTER END -->
 
         <!-- JAVASCRIPT FILE LINK -->
-        <script src="Javascript/faqs.js"></script>
         <script src="Javascript/feedback.js"></script>
     </body>
 
