Modify The Header Section

--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
             <div class="index-document-section">
                 <div class="for-english">
                     <h3 class="index-document-header">For English</h3>
-                    <a class="index-document-button" href="documentList.html">Click Here</a>
+                    <a class="index-document-button" href="initial.html">Click Here</a>
                 </div>
                 <div class="for-bangla">
                     <h3 class="index-document-header">বাংলার জন্য</h3>
-                    <a class="index-document-button" href="documentListBangla.html">ক্লিক করুন</a>
+                    <a class="index-document-button" href="initialBangla.html">ক্লিক করুন</a>
                 </div>
             </div>
         </section>
