--- a/initial.html
+++ b/initial.html
@@ -89,7 +89,7 @@
             <div class="bangla">
                 <ul class="bangla-section">
                     <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
-                    <li><a href="documentListBangla.html">ডকুমেন্ট লিস্ট</a></li>
+                    <li><a href="initialBangla.html">ডকুমেন্ট লিস্ট</a></li>
                     <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
                     <li><a href="aboutUsBangla.html">আমাদের তথ্য</a></li>
                     <li><a href="contactUs.html">যোগাযোগ</a></li>
@@ -102,7 +102,7 @@
 
         <!-- MAIN SECTION START -->
         <section class="document-lists">
-            <a class="switch-btn" href="documentListBangla.html">বাংলা</a>
+            <a class="switch-btn" href="initialBangla.html">বাংলা</a>
             <h1 class="document-lists-title">Initial Pre-Qualification Document List</h1>
             <div class="document-list">
                 <h5 class="document-list-title">For a Mortgage 'Pre-Approval' Letter pls send the following to </h5>
