--- a/faqsBangla.html
+++ b/faqsBangla.html
@@ -89,7 +89,7 @@
             <div class="bangla">
                 <ul class="bangla-section">
                     <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
-                    <li><a href="documentListBangla.html">ডকুমেন্ট লিস্ট</a></li>
+                    <li><a href="initialBangla.html">ডকুমেন্ট লিস্ট</a></li>
                     <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
                     <li><a href="aboutUsBangla.html">আমাদের তথ্য</a></li>
                     <li><a href="contactUs.html">যোগাযোগ</a></li>
