--- a/faqs.html
+++ b/faqs.html
@@ -221,23 +221,23 @@
 
         <!-- MAIN SECTION END -->
 
-        <!-- FOOTER START -->
-        <footer class="footer">
+         <!-- FOOTER START -->
+         <footer class="footer">
             <div class="about">
                 <h1 class="footer-title">About Us</h1>
-                <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve
-                    their dream of homeownership. With years of experience in the mortgage industry, I provide
+                <p class="footer-text">As the owners of Desh Capital LLC, we are committed to helping our clients
+                    achieve their dream of homeownership. With years of experience in the mortgage industry, we provide
                     personalized service and attention to detail to identify the best mortgage solution for each
-                    client's unique needs and goals. I pride myself on honesty, integrity, and professionalism, and am
-                    dedicated to building long-term relationships with my clients to help them achieve their financial
-                    dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
+                    client's unique needs and goals. We pride ourselves on honesty, integrity, and professionalism, and
+                    we are dedicated to building long-term relationships with our clients to help them achieve their
+                    financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
                 <p class="footer-text">Follow us on</p>
 
                 <ul class="icon">
                     <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i
                                 class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@deshcapital" target="_blank"><i
+                                class="fab fa-youtube"></i></a></li>
                 </ul>
             </div>
             <div class="quick-links">
@@ -269,8 +269,8 @@
                 <h1 class="footer-title">Contact Us</h1>
                 <h3 class="nmls">NMLS 2418672</h3>
                 <p class="contact-info"><span class="contact-info-header">Address:</span> 2627 Chatham Circle
-                    <br>Kissimmee,
-                    FL 34746</p>
+                    <br>Kissimmee, FL 34746
+                </p>
                 <p class="contact-info">M-F 9am 5pm EST</p>
                 <ul class="icon">
                     <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
@@ -278,7 +278,7 @@
                 </ul>
             </div>
         </footer>
-        <p class="footer-version">@ V-0.0.0.1 @</p>
+        <p class="footer-version">@ V-0.0.0.2 @</p>
         <!-- FOOTER END -->
 
         <!-- JAVASCRIPT FILE LINK -->
