--- a/faqsBangla.html
+++ b/faqsBangla.html
@@ -32,6 +32,7 @@
                 <div>
                     <ul class="icons">
                         <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
+                        <li><a href="https://www.youtube.com/@deshcapital" target="_blank"><i class="fab fa-youtube"></i></a></li>
                         <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i
                                     class="fab fa-facebook-square"></i></a>
                         </li>
